--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -33,7 +33,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Green-Red Displacement : Linear Regression  \n",
+        "# Linear Regression  \n",
         "Linear regression is the simplest method of predicting continuous variables. Its all about establishing a relationship between dependent variable (*Y*) and one or more independent variables (*X*) using a best fit straight line (also known as regression line).\n",
         "\n",
         "Mathematically,\n",
